<resources>
    <string name="app_name">Preparify - Job Preparation App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash_text">Everything you need \nat one place</string>
    <string name="profesional_s_choice">#Profesional’s choice</string>
    <string name="screen1_text">Starting your placement \n journey Today!</string>
    <string name="name">Full Name</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="forgot_password">forgot password?</string>
    <string name="registration">Sign Up</string>
    <string name="age">age</string>
    <string name="occupation">Occupation</string>
    <string name="student">student</string>
    <string name="learner">Learner</string>
    <string name="other">other</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Sign Up</string>
    <string name="gender">Gender</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="login_subtitle">Choose an option to log in</string>
    <string name="login_with_google">Continue with Google</string>
    <string name="login_with_facebook">Continue with Facebook</string>
    <string name="login_with_email">Sign in with Email</string>
    <string name="not_registered">Not registered yet?</string>
    <string name="register_here">Register here</string>
    <string name="or">OR</string>
    <string name="welcome_subtitle">Welcome to Preparify &#x1F44B;</string>
    <string name="not_registered_sign_up">if you\'re not register?</string>
    <string name="terms_cond_subtitle">By continuing, I accept Preparify\'s</string>
    <string name="terms_conditions"><![CDATA[Terms of Use]]></string>

    <string name="default_web_client_id">575830212798-4g5eoqf56ld0a3ffd39fj4kth8oblhm2.apps.googleusercontent.com</string>
    <string name="skip">skip</string>
    <string name="back">back</string>
    <string name="do_later">Do it later</string>
    <string name="facebook_app_id">462632900262608</string>
    <string name="fb_login_protocol_scheme">fb462632900262608</string>
    <string name="facebook_client_token">9859de7e638984c6bcc8cd04cfb030af</string>
    <string name="password_rules_subtitle">Password must be between 6 and 20 characters.</string>
    <string name="reset_password">Reset Password</string>
    <string name="OTP">One Time Password</string>
    <string name="submit_otp">Submit OTP</string>
    <string name="send_otp">Submit OTP</string>
    <string name="explore">Explore</string>
    <string name="back_subtitle">Your Subtitle</string>
    <string name="latest_courses">Latest Courses</string>
    <string name="popular_courses">Popular Courses</string>
    <string name="no_courses_available_desc">Currently no course available!</string>
    <string name="selected_course_name">Selected Course</string>
    <string name="proceed">Proceed</string>
    <string name="banner_sample_text"><![CDATA[Let’s schedule your\nstudy Timing & Planning]]></string>
    <string name="mo_lesson">Currently, no lessons have been added.</string>
    <string name="assessment">Assessment</string>
    <string name="time_left">Time Left: 00:00</string>
    <string name="remaining_question">Question 1 out of 10</string>
    <string name="question_text">This is a Demo Question? </string>
    <string name="next_text">next</string>
    <string name="quiz_results">Quiz Results</string>
    <string name="score">Score:</string>
    <string name="total_questions">Total Questions:</string>

</resources>