<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="22dp"
    tools:context=".ui.Fragments.RegistrationFragment">

    <!-- Title TextView -->
    <TextView
        android:id="@+id/registerTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:fontFamily="@font/alatsi"
        android:text="@string/registration"
        android:textColor="@color/main_color"
        android:textSize="32sp"
        android:paddingHorizontal="10dp"
        android:textStyle="bold" />

    <!-- LinearLayout for Input Fields -->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerTitle"
        android:layout_marginTop="32dp"
        android:orientation="vertical">

        <!-- Name TextInput -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            app:startIconDrawable="@drawable/ico_user"
            app:startIconTint="@color/main_color"
            style="@style/RoundedTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Age TextInput -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ageInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/age"
            app:startIconDrawable="@drawable/ico_age"
            app:startIconTint="@color/main_color"
            style="@style/RoundedTextInputLayout"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ageEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Gender RadioGroup -->
        <TextView
            android:id="@+id/genderLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textStyle="bold"
            android:layout_marginTop="16dp" />

        <RadioGroup
            android:id="@+id/genderRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/maleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:buttonTint="@color/main_color" />

            <RadioButton
                android:id="@+id/femaleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:layout_marginHorizontal="16dp"
                android:buttonTint="@color/main_color" />

            <RadioButton
                android:id="@+id/otherGenderRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other"
                android:buttonTint="@color/main_color" />
        </RadioGroup>

        <!-- Occupation RadioGroup -->
        <TextView
            android:id="@+id/occupationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/occupation"
            android:textStyle="bold"
            android:layout_marginTop="16dp" />

        <RadioGroup
            android:id="@+id/occupationRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/studentRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/student"
                android:buttonTint="@color/main_color" />

            <RadioButton
                android:id="@+id/learnerRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/learner"
                android:layout_marginHorizontal="16dp"
                android:buttonTint="@color/main_color" />

            <RadioButton
                android:id="@+id/otherOccupationRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other"
                android:buttonTint="@color/main_color" />
        </RadioGroup>

        <!-- Email TextInput -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:startIconDrawable="@drawable/ico_mail"
            app:startIconTint="@color/main_color"
            style="@style/RoundedTextInputLayout"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password TextInput -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ico_lock"
            app:startIconTint="@color/main_color"
            android:layout_marginTop="16dp"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            style="@style/RoundedTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLength="20"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Confirm Password TextInput -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPasswordInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ico_lock"
            app:startIconTint="@color/main_color"
            android:layout_marginTop="16dp"
            style="@style/RoundedTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLength="20"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Register Button -->
        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textStyle="bold"
            android:background="@drawable/rounded_button"
            android:textColor="@color/white"
            android:layout_marginTop="22dp" />
    </LinearLayout>
</RelativeLayout>
