<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="26dp"
    android:orientation="vertical"
    tools:context=".ui.Fragments.LoginOptionsFragment">

    <!-- Center content vertically -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/btnDoLater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="16dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_flex"
                android:text="@string/do_later"
                android:textColor="@color/main_color"
                android:textSize="14sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_marginBottom="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/next" />

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:src="@drawable/strategy"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_subtitle"
            android:textColor="@color/text_black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/login_subtitle"
            android:textColor="@color/text_fade"
            android:textSize="16sp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGoogleLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/rounded_btn_fade"
            android:drawableStart="@drawable/ic_google"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingVertical="10dp"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_flex"
            android:text="@string/login_with_google"
            android:textAllCaps="false"
            android:textColor="@color/text_black"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnFacebookLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:background="@drawable/rounded_btn_fade"
            android:drawableStart="@drawable/ic_facebook"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingVertical="10dp"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_flex"
            android:text="@string/login_with_facebook"
            android:textColor="@color/text_black"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/text_black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/text_black"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/text_black"/>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:background="@drawable/rounded_btn_fade"
            android:drawableStart="@drawable/ico_email"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingVertical="10dp"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_flex"
            android:text="@string/login_with_email"
            android:textColor="@color/text_black"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="14dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_registered"
                android:textColor="@color/text_black"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registration"
                android:textColor="@color/main_color"
                android:textSize="14sp"
                android:paddingStart="3dp"
                android:paddingEnd="0dp"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Align Terms and Conditions at the bottom -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_cond_subtitle"
            android:textColor="@color/text_light_black"
            android:fontFamily="@font/roboto_flex"
            android:textSize="13sp"/>

        <TextView
            android:id="@+id/tvTerms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_conditions"
            android:textColor="@color/main_color"
            android:textSize="13sp"
            android:fontFamily="@font/roboto_flex"
            android:paddingStart="3dp"
            android:paddingEnd="0dp"/>

    </LinearLayout>
</LinearLayout>
