<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"> <!-- Aligns all child elements centrally -->

    <!-- Timer Section with Icon and Text -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <!-- Timer Icon -->
        <ImageView
            android:id="@+id/timerImageView"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="Timer Icon"
            android:src="@drawable/ic_timer" />

        <!-- Timer TextView -->
        <TextView
            android:id="@+id/timerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_left"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

    <!-- Question Index Text (e.g., Question 1 out of 10) -->
    <TextView
        android:id="@+id/questionIndexTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/remaining_question"
        android:textColor="@color/white"
        android:textFontWeight="100"
        android:textSize="12sp"
        android:fontFamily="@font/roboto_flex"
        android:textStyle="italic" />

    <!-- Question Text -->
    <TextView
        android:id="@+id/questionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_flex"
        android:paddingBottom="16dp"
        android:text="@string/question_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <!-- Options Buttons -->
    <LinearLayout
        android:id="@+id/optionsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="16dp">
        <!-- Option Buttons will be dynamically added here -->
    </LinearLayout>

    <!-- Explanation Text -->
    <TextView
        android:id="@+id/explanationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="12sp"
        android:textColor="@color/white"
        android:text="Explanation goes here."
        android:textSize="16sp"
        android:visibility="gone" />

    <!-- Next Button -->
    <Button
        android:id="@+id/nextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next_text"
        android:background="@drawable/quiz_next_btn"
        android:layout_marginBottom="16dp" />
    <!-- Skip Button -->
    <Button
        android:id="@+id/skipButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:textStyle="bold"
        android:background="@drawable/quiz_next_btn"
        android:layout_marginTop="22dp" />

</LinearLayout>
