<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="30dp"
    tools:context=".ui.Fragments.CourseSelectionFragment">

    <!-- Include the fixed layout with the back button -->
    <include
        layout="@layout/subtitle_back_btn"
        android:id="@+id/fixedInclude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- Scrollable content starts below the included layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fixedInclude"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvPopularCourses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/popular_courses"
            android:gravity="center_horizontal"
            android:layout_marginVertical="14dp"
            android:textSize="16sp"
            android:textColor="@color/main_color"
            android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTrendingCourses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                tools:listitem="@layout/item_course_card"/>

            <TextView
                android:id="@+id/tvLatestCourses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/latest_courses"
            android:gravity="center_horizontal"
            android:layout_marginVertical="14dp"
            android:textSize="16sp"
            android:textColor="@color/main_color"
            android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvLatestCourses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                tools:listitem="@layout/item_course_card"/>

            <!-- Single ImageView to show when there are no courses -->
            <ImageView
                android:id="@+id/noCoursesImage"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginTop="200dp"
                android:visibility="gone"
                android:src="@drawable/not_available"
                android:contentDescription="@string/no_courses_available_desc" />

            <TextView
                android:id="@+id/tvNoCourseAvailable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_courses_available_desc"
                android:gravity="center"
                android:layout_marginVertical="14dp"
                android:textSize="16sp"
                android:visibility="gone"
                android:textColor="@color/main_color"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
